--- a/kernel/kernel-keymanager-service/Dockerfile
+++ b/kernel/kernel-keymanager-service/Dockerfile
@@ -78,6 +78,7 @@ ENV hsm_local_dir_name=${hsm_local_dir}
 # install packages and create user
 RUN apt-get -y update \
 && apt-get install -y unzip sudo\
+&& apt-get install software-properties-common -y
 && groupadd -g ${container_user_gid} ${container_user_group} \
 && useradd -u ${container_user_uid} -g ${container_user_group} -s /bin/sh -m ${container_user} \
 && adduser ${container_user} sudo \
