--- a/kernel/kernel-keymanager-service/Dockerfile
+++ b/kernel/kernel-keymanager-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM ubuntu:20.04
 
 ARG SOURCE
 ARG COMMIT_HASH
@@ -9,118 +9,105 @@ LABEL commit_hash=${COMMIT_HASH}
 LABEL commit_id=${COMMIT_ID}
 LABEL build_time=${BUILD_TIME}
 
-# can be passed during Docker build as build time environment for github branch to pickup configuration from.
+# Can be passed during Docker build as build-time environment for GitHub branch to pick up configuration from.
 ARG spring_config_label
 
-# can be passed during Docker build as build time environment for spring profiles active 
+# Can be passed during Docker build as build-time environment for Spring profiles active.
 ARG active_profile
 
-# can be passed during Docker build as build time environment for config server URL 
+# Can be passed during Docker build as build-time environment for Config server URL.
 ARG spring_config_url
 
-# can be passed during Docker build as build time environment for glowroot 
+# Can be passed during Docker build as build-time environment for Glowroot.
 ARG is_glowroot
 
-# can be passed during Docker build as build time environment for artifactory URL
+# Can be passed during Docker build as build-time environment for Artifactory URL.
 ARG artifactory_url
 
-# can be passed during Docker build as build time environment for hsm client zip file path
+# Can be passed during Docker build as build-time environment for HSM client zip file path.
 ARG hsm_client_zip_path
 
-# can be passed during Docker build as build time environment management rmi server hostname
-#ARG management_rmi_server_hostname
-
-# can be passed during Docker build as build time environment management rmi server port
-#ARG management_jmxremote_rmi_port
-
-# environment variable to pass active profile such as DEV, QA etc at docker runtime
+# Environment variable for the active profile.
 ENV active_profile_env=${active_profile}
 
-# environment variable to pass github branch to pickup configuration from, at docker runtime
+# Environment variable for the GitHub branch.
 ENV spring_config_label_env=${spring_config_label}
 
-# environment variable to pass spring configuration url, at docker runtime
+# Environment variable for Spring configuration URL.
 ENV spring_config_url_env=${spring_config_url}
 
-# environment variable to pass glowroot, at docker runtime
+# Environment variable for Glowroot.
 ENV is_glowroot_env=${is_glowroot}
 
-# environment variable to pass artifactory url, at docker runtime
+# Environment variable for Artifactory URL.
 ENV artifactory_url_env=${artifactory_url}
-# environment variable to pass iam_adapter url, at docker runtime
+
+# Environment variable for IAM Adapter URL.
 ENV iam_adapter_url_env=${iam_adapter_url}
 
-# environment variable to pass hsm client zip file path, at docker runtime
+# Environment variable for HSM client zip file path.
 ENV hsm_zip_file_path=${hsm_client_zip_path}
 
-# environment variable to pass management rmi server hostname, at docker runtime
-#ENV management_rmi_server_hostname_env=${management_rmi_server_hostname}
-
-# environment variable to pass management rmi server port, at docker runtime
-#ENV management_jmxremote_rmi_port_env=${management_jmxremote_rmi_port}
-
-# can be passed during Docker build as build time environment for github branch to pickup configuration from.
+# User-related arguments.
 ARG container_user=mosip
-
-# can be passed during Docker build as build time environment for github branch to pickup configuration from.
 ARG container_user_group=mosip
-
-# can be passed during Docker build as build time environment for github branch to pickup configuration from.
 ARG container_user_uid=1001
-
-# can be passed during Docker build as build time environment for github branch to pickup configuration from.
 ARG container_user_gid=1001
 
+# Local directory for HSM client.
 ARG hsm_local_dir=hsm-client
-
 ENV hsm_local_dir_name=${hsm_local_dir}
 
-# install packages and create user
-RUN apt-get -y update \
-&& apt-get install -y unzip sudo\
-&& apt-get install software-properties-common -y \
-&& groupadd -g ${container_user_gid} ${container_user_group} \
-&& useradd -u ${container_user_uid} -g ${container_user_group} -s /bin/sh -m ${container_user} \
-&& adduser ${container_user} sudo \
-&& echo "%sudo ALL=(ALL) NOPASSWD:/home/${container_user}/${hsm_local_dir}/install.sh" >> /etc/sudoers \
-&& sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y\
-&& apt-get -y update\
-&& apt-get install libc6-dev -y 
+# Install packages, create user, and install OpenJDK 11
+RUN apt-get update \
+    && apt-get install -y \
+    unzip \
+    sudo \
+    wget \
+    software-properties-common \
+    openjdk-11-jdk \
+    && groupadd -g ${container_user_gid} ${container_user_group} \
+    && useradd -u ${container_user_uid} -g ${container_user_group} -s /bin/sh -m ${container_user} \
+    && adduser ${container_user} sudo \
+    && echo "%sudo ALL=(ALL) NOPASSWD:/home/${container_user}/${hsm_local_dir}/install.sh" >> /etc/sudoers \
+    && sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y \
+    && apt-get update \
+    && apt-get install -y libc6-dev \
+    && apt-get clean
 
-# set working directory for the user
+# Set the working directory for the user
 WORKDIR /home/${container_user}
 
 ENV work_dir=/home/${container_user}
 
 ARG loader_path=${work_dir}/additional_jars/
-
 RUN mkdir -p ${loader_path}
 
 ENV loader_path_env=${loader_path}
 
+# Add necessary configuration and libraries
 ADD configure_start.sh configure_start.sh
-
-ADD ./lib/* "${loader_path_env}"/
+ADD ./lib/* "${loader_path_env}/"
 
 RUN chmod +x configure_start.sh
 
-# creating folder to copy additional supporting jar files required at run-time.
-#RUN mkdir -p /home/${container_user}/additional-jars
-
+# Copy the JAR files into the container
 ADD ./target/*.jar /target/
-RUN find /target -name '*.jar' -executable -type f "-print0" | xargs "-0" cp -t / \
+RUN find /target -name '*.jar' -executable -type f -print0 | xargs -0 cp -t / \
     && rm -rf /target \
     && mv /*.jar ${work_dir}/kernel-keymanager-service.jar
 
-# change permissions of file inside working dir
+# Change permissions of files inside the working directory
 RUN chown -R ${container_user}:${container_user} /home/${container_user}
 
-# select container user for all tasks
+# Select container user for all tasks
 USER ${container_user_uid}:${container_user_gid}
 
+# Expose ports for the application
 EXPOSE 8088
 EXPOSE 9010
 
+# Set the entrypoint and command to run the application
 ENTRYPOINT [ "./configure_start.sh" ]
 CMD if [ "$is_glowroot_env" = "present" ]; then \
     wget -q "${artifactory_url_env}"/artifactory/libs-release-local/io/mosip/testing/glowroot.zip ; \
@@ -133,4 +120,3 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     wget -q "${iam_adapter_url_env}" -O "${loader_path_env}"/kernel-auth-adapter.jar; \
     java -jar -Dloader.path="${loader_path_env}" -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" ./kernel-keymanager-service.jar ; \
     fi
-
